--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -5355,6 +5355,34 @@ layers:
                         font:
                             style: italic
                             weight: normal
+
+        gate-early:
+            filter: { kind: gate, $zoom: { max: 20 } }
+            draw:
+                mapzen_icon_library:
+                    icon: generic
+        gate-late:
+            filter: { kind: gate, $zoom: { min: 20 } }
+            draw:
+                mapzen_icon_library:
+                    visible: yes
+
+        tree:
+            filter: { kind: tree, $zoom: { min: 18 } }
+            draw:
+                background-icons:
+                    # TODO: put tree icons behind the buildings
+                    # See SF State University #20/37.72314/-122.47772
+                    color: [0.145,0.745,0.643]
+                    visible: true #global.icon_visible_poi_landuse_e
+                    collide: false
+            z18:
+                filter: { $zoom: [18] }
+                draw:
+                    mapzen_icon_library:
+                        color: [0.459,0.765,0.722]
+                        sprite: tree-s
+
         glacier:
             filter:
                 kind: glacier
