--- a/themes/label-8.yaml
+++ b/themes/label-8.yaml
@@ -30,7 +30,7 @@ global:
     text_visible_tertiary:              true
     text_visible_tertiary_e:            true     # false for default, false for more
     text_visible_minor_road:            true
-    text_visible_minor_road_e:          true
+    text_visible_minor_road_e:          false
     text_visible_service_road:          true
     text_visible_path:                  true
     text_visible_piste:                 true
